cmake_minimum_required(VERSION 3.7)
project(djinni_client_app)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        android_project/AndroidClientApp/app/src/main/cpp/native-lib.cpp
        deps/djinni/example/generated-src/cpp/item_list.hpp
        deps/djinni/example/generated-src/cpp/sort_items.hpp
        deps/djinni/example/generated-src/cpp/sort_order.hpp
        deps/djinni/example/generated-src/cpp/textbox_listener.hpp
        deps/djinni/example/generated-src/jni/NativeItemList.cpp
        deps/djinni/example/generated-src/jni/NativeItemList.hpp
        deps/djinni/example/generated-src/jni/NativeSortItems.cpp
        deps/djinni/example/generated-src/jni/NativeSortItems.hpp
        deps/djinni/example/generated-src/jni/NativeSortOrder.hpp
        deps/djinni/example/generated-src/jni/NativeTextboxListener.cpp
        deps/djinni/example/generated-src/jni/NativeTextboxListener.hpp
        deps/djinni/example/generated-src/objc/TextSort-Bridging-Header.h
        deps/djinni/example/generated-src/objc/TXSItemList+Private.h
        deps/djinni/example/generated-src/objc/TXSItemList.h
        deps/djinni/example/generated-src/objc/TXSSortItems+Private.h
        deps/djinni/example/generated-src/objc/TXSSortItems.h
        deps/djinni/example/generated-src/objc/TXSSortOrder+Private.h
        deps/djinni/example/generated-src/objc/TXSSortOrder.h
        deps/djinni/example/generated-src/objc/TXSTextboxListener+Private.h
        deps/djinni/example/generated-src/objc/TXSTextboxListener.h
        deps/djinni/example/handwritten-src/cpp/sort_items_impl.cpp
        deps/djinni/example/handwritten-src/cpp/sort_items_impl.hpp
        deps/djinni/example/handwritten-src/objc/TXSAppDelegate.h
        deps/djinni/example/handwritten-src/objc/TXSTextboxListenerImpl.h
        deps/djinni/example/handwritten-src/objc/TXSViewController.h
        deps/djinni/extension-libs/jni-exceptions/custom_exception_type.cpp
        deps/djinni/extension-libs/platform-threads/cpp/platform_threads_impl.hpp
        deps/djinni/extension-libs/platform-threads/objc/DJIObjCPlatformThreads.h
        deps/djinni/support-lib/jni/djinni_main.cpp
        deps/djinni/support-lib/jni/djinni_support.cpp
        deps/djinni/support-lib/jni/djinni_support.hpp
        deps/djinni/support-lib/jni/Marshal.hpp
        deps/djinni/support-lib/objc/DJICppWrapperCache+Private.h
        deps/djinni/support-lib/objc/DJIError.h
        deps/djinni/support-lib/objc/DJIMarshal+Private.h
        deps/djinni/support-lib/objc/DJIObjcWrapperCache+Private.h
        deps/djinni/support-lib/djinni_common.hpp
        deps/djinni/support-lib/proxy_cache_impl.hpp
        deps/djinni/support-lib/proxy_cache_interface.hpp
        deps/djinni/test-suite/generated-src/cpp/_varname_interface_.hpp
        deps/djinni/test-suite/generated-src/cpp/_varname_record_.hpp
        deps/djinni/test-suite/generated-src/cpp/access_flags.hpp
        deps/djinni/test-suite/generated-src/cpp/assorted_primitives.cpp
        deps/djinni/test-suite/generated-src/cpp/assorted_primitives.hpp
        deps/djinni/test-suite/generated-src/cpp/client_interface.hpp
        deps/djinni/test-suite/generated-src/cpp/client_returned_record.hpp
        deps/djinni/test-suite/generated-src/cpp/color.hpp
        deps/djinni/test-suite/generated-src/cpp/Conflict.hpp
        deps/djinni/test-suite/generated-src/cpp/conflict_user.hpp
        deps/djinni/test-suite/generated-src/cpp/constant_enum.hpp
        deps/djinni/test-suite/generated-src/cpp/constant_record.hpp
        deps/djinni/test-suite/generated-src/cpp/constants.cpp
        deps/djinni/test-suite/generated-src/cpp/constants.hpp
        deps/djinni/test-suite/generated-src/cpp/constants_interface.cpp
        deps/djinni/test-suite/generated-src/cpp/constants_interface.hpp
        deps/djinni/test-suite/generated-src/cpp/cpp_exception.hpp
        deps/djinni/test-suite/generated-src/cpp/date_record.cpp
        deps/djinni/test-suite/generated-src/cpp/date_record.hpp
        deps/djinni/test-suite/generated-src/cpp/empty_flags.hpp
        deps/djinni/test-suite/generated-src/cpp/empty_record.hpp
        deps/djinni/test-suite/generated-src/cpp/enum_usage_interface.hpp
        deps/djinni/test-suite/generated-src/cpp/enum_usage_record.hpp
        deps/djinni/test-suite/generated-src/cpp/extended_record_base.cpp
        deps/djinni/test-suite/generated-src/cpp/extended_record_base.hpp
        deps/djinni/test-suite/generated-src/cpp/extern_interface_1.hpp
        deps/djinni/test-suite/generated-src/cpp/extern_interface_2.hpp
        deps/djinni/test-suite/generated-src/cpp/extern_record_with_derivings.cpp
        deps/djinni/test-suite/generated-src/cpp/extern_record_with_derivings.hpp
        deps/djinni/test-suite/generated-src/cpp/first_listener.hpp
        deps/djinni/test-suite/generated-src/cpp/flag_roundtrip.hpp
        deps/djinni/test-suite/generated-src/cpp/interface_using_extended_record.cpp
        deps/djinni/test-suite/generated-src/cpp/interface_using_extended_record.hpp
        deps/djinni/test-suite/generated-src/cpp/java_only_listener.hpp
        deps/djinni/test-suite/generated-src/cpp/listener_caller.hpp
        deps/djinni/test-suite/generated-src/cpp/map_date_record.hpp
        deps/djinni/test-suite/generated-src/cpp/map_list_record.hpp
        deps/djinni/test-suite/generated-src/cpp/map_record.hpp
        deps/djinni/test-suite/generated-src/cpp/nested_collection.hpp
        deps/djinni/test-suite/generated-src/cpp/objc_only_listener.hpp
        deps/djinni/test-suite/generated-src/cpp/primitive_list.hpp
        deps/djinni/test-suite/generated-src/cpp/record_using_extended_record.cpp
        deps/djinni/test-suite/generated-src/cpp/record_using_extended_record.hpp
        deps/djinni/test-suite/generated-src/cpp/record_with_derivings.cpp
        deps/djinni/test-suite/generated-src/cpp/record_with_derivings.hpp
        deps/djinni/test-suite/generated-src/cpp/record_with_duration_and_derivings.cpp
        deps/djinni/test-suite/generated-src/cpp/record_with_duration_and_derivings.hpp
        deps/djinni/test-suite/generated-src/cpp/record_with_flags.hpp
        deps/djinni/test-suite/generated-src/cpp/record_with_nested_derivings.cpp
        deps/djinni/test-suite/generated-src/cpp/record_with_nested_derivings.hpp
        deps/djinni/test-suite/generated-src/cpp/return_one.hpp
        deps/djinni/test-suite/generated-src/cpp/return_two.hpp
        deps/djinni/test-suite/generated-src/cpp/reverse_client_interface.hpp
        deps/djinni/test-suite/generated-src/cpp/second_listener.hpp
        deps/djinni/test-suite/generated-src/cpp/set_record.hpp
        deps/djinni/test-suite/generated-src/cpp/test_duration.hpp
        deps/djinni/test-suite/generated-src/cpp/test_helpers.hpp
        deps/djinni/test-suite/generated-src/cpp/user_token.hpp
        deps/djinni/test-suite/generated-src/cpp/uses_single_language_listeners.hpp
        deps/djinni/test-suite/generated-src/cpp/wchar_test_helpers.hpp
        deps/djinni/test-suite/generated-src/cpp/wchar_test_rec.hpp
        deps/djinni/test-suite/generated-src/jni/NativeAccessFlags.hpp
        deps/djinni/test-suite/generated-src/jni/NativeAssortedPrimitives.cpp
        deps/djinni/test-suite/generated-src/jni/NativeAssortedPrimitives.hpp
        deps/djinni/test-suite/generated-src/jni/NativeClientInterface.cpp
        deps/djinni/test-suite/generated-src/jni/NativeClientInterface.hpp
        deps/djinni/test-suite/generated-src/jni/NativeClientReturnedRecord.cpp
        deps/djinni/test-suite/generated-src/jni/NativeClientReturnedRecord.hpp
        deps/djinni/test-suite/generated-src/jni/NativeColor.hpp
        deps/djinni/test-suite/generated-src/jni/NativeConflict.cpp
        deps/djinni/test-suite/generated-src/jni/NativeConflict.hpp
        deps/djinni/test-suite/generated-src/jni/NativeConflictUser.cpp
        deps/djinni/test-suite/generated-src/jni/NativeConflictUser.hpp
        deps/djinni/test-suite/generated-src/jni/NativeConstantEnum.hpp
        deps/djinni/test-suite/generated-src/jni/NativeConstantRecord.cpp
        deps/djinni/test-suite/generated-src/jni/NativeConstantRecord.hpp
        deps/djinni/test-suite/generated-src/jni/NativeConstants.cpp
        deps/djinni/test-suite/generated-src/jni/NativeConstants.hpp
        deps/djinni/test-suite/generated-src/jni/NativeConstantsInterface.cpp
        deps/djinni/test-suite/generated-src/jni/NativeConstantsInterface.hpp
        deps/djinni/test-suite/generated-src/jni/NativeCppException.cpp
        deps/djinni/test-suite/generated-src/jni/NativeCppException.hpp
        deps/djinni/test-suite/generated-src/jni/NativeDateRecord.cpp
        deps/djinni/test-suite/generated-src/jni/NativeDateRecord.hpp
        deps/djinni/test-suite/generated-src/jni/NativeEmptyFlags.hpp
        deps/djinni/test-suite/generated-src/jni/NativeEmptyRecord.cpp
        deps/djinni/test-suite/generated-src/jni/NativeEmptyRecord.hpp
        deps/djinni/test-suite/generated-src/jni/NativeEnumUsageInterface.cpp
        deps/djinni/test-suite/generated-src/jni/NativeEnumUsageInterface.hpp
        deps/djinni/test-suite/generated-src/jni/NativeEnumUsageRecord.cpp
        deps/djinni/test-suite/generated-src/jni/NativeEnumUsageRecord.hpp
        deps/djinni/test-suite/generated-src/jni/NativeExtendedRecord.cpp
        deps/djinni/test-suite/generated-src/jni/NativeExtendedRecord.hpp
        deps/djinni/test-suite/generated-src/jni/NativeExternInterface1.cpp
        deps/djinni/test-suite/generated-src/jni/NativeExternInterface1.hpp
        deps/djinni/test-suite/generated-src/jni/NativeExternInterface2.cpp
        deps/djinni/test-suite/generated-src/jni/NativeExternInterface2.hpp
        deps/djinni/test-suite/generated-src/jni/NativeExternRecordWithDerivings.cpp
        deps/djinni/test-suite/generated-src/jni/NativeExternRecordWithDerivings.hpp
        deps/djinni/test-suite/generated-src/jni/NativeFirstListener.cpp
        deps/djinni/test-suite/generated-src/jni/NativeFirstListener.hpp
        deps/djinni/test-suite/generated-src/jni/NativeFlagRoundtrip.cpp
        deps/djinni/test-suite/generated-src/jni/NativeFlagRoundtrip.hpp
        deps/djinni/test-suite/generated-src/jni/NativeInterfaceUsingExtendedRecord.cpp
        deps/djinni/test-suite/generated-src/jni/NativeInterfaceUsingExtendedRecord.hpp
        deps/djinni/test-suite/generated-src/jni/NativeJavaOnlyListener.cpp
        deps/djinni/test-suite/generated-src/jni/NativeJavaOnlyListener.hpp
        deps/djinni/test-suite/generated-src/jni/NativeListenerCaller.cpp
        deps/djinni/test-suite/generated-src/jni/NativeListenerCaller.hpp
        deps/djinni/test-suite/generated-src/jni/NativeMapDateRecord.cpp
        deps/djinni/test-suite/generated-src/jni/NativeMapDateRecord.hpp
        deps/djinni/test-suite/generated-src/jni/NativeMapListRecord.cpp
        deps/djinni/test-suite/generated-src/jni/NativeMapListRecord.hpp
        deps/djinni/test-suite/generated-src/jni/NativeMapRecord.cpp
        deps/djinni/test-suite/generated-src/jni/NativeMapRecord.hpp
        deps/djinni/test-suite/generated-src/jni/NativeNestedCollection.cpp
        deps/djinni/test-suite/generated-src/jni/NativeNestedCollection.hpp
        deps/djinni/test-suite/generated-src/jni/NativeObjcOnlyListener.cpp
        deps/djinni/test-suite/generated-src/jni/NativeObjcOnlyListener.hpp
        deps/djinni/test-suite/generated-src/jni/NativePrimitiveList.cpp
        deps/djinni/test-suite/generated-src/jni/NativePrimitiveList.hpp
        deps/djinni/test-suite/generated-src/jni/NativeRecordUsingExtendedRecord.cpp
        deps/djinni/test-suite/generated-src/jni/NativeRecordUsingExtendedRecord.hpp
        deps/djinni/test-suite/generated-src/jni/NativeRecordWithDerivings.cpp
        deps/djinni/test-suite/generated-src/jni/NativeRecordWithDerivings.hpp
        deps/djinni/test-suite/generated-src/jni/NativeRecordWithDurationAndDerivings.cpp
        deps/djinni/test-suite/generated-src/jni/NativeRecordWithDurationAndDerivings.hpp
        deps/djinni/test-suite/generated-src/jni/NativeRecordWithFlags.cpp
        deps/djinni/test-suite/generated-src/jni/NativeRecordWithFlags.hpp
        deps/djinni/test-suite/generated-src/jni/NativeRecordWithNestedDerivings.cpp
        deps/djinni/test-suite/generated-src/jni/NativeRecordWithNestedDerivings.hpp
        deps/djinni/test-suite/generated-src/jni/NativeReturnOne.cpp
        deps/djinni/test-suite/generated-src/jni/NativeReturnOne.hpp
        deps/djinni/test-suite/generated-src/jni/NativeReturnTwo.cpp
        deps/djinni/test-suite/generated-src/jni/NativeReturnTwo.hpp
        deps/djinni/test-suite/generated-src/jni/NativeReverseClientInterface.cpp
        deps/djinni/test-suite/generated-src/jni/NativeReverseClientInterface.hpp
        deps/djinni/test-suite/generated-src/jni/NativeSecondListener.cpp
        deps/djinni/test-suite/generated-src/jni/NativeSecondListener.hpp
        deps/djinni/test-suite/generated-src/jni/NativeSetRecord.cpp
        deps/djinni/test-suite/generated-src/jni/NativeSetRecord.hpp
        deps/djinni/test-suite/generated-src/jni/NativeTestDuration.cpp
        deps/djinni/test-suite/generated-src/jni/NativeTestDuration.hpp
        deps/djinni/test-suite/generated-src/jni/NativeTestHelpers.cpp
        deps/djinni/test-suite/generated-src/jni/NativeTestHelpers.hpp
        deps/djinni/test-suite/generated-src/jni/NativeUserToken.cpp
        deps/djinni/test-suite/generated-src/jni/NativeUserToken.hpp
        deps/djinni/test-suite/generated-src/jni/NativeUsesSingleLanguageListeners.cpp
        deps/djinni/test-suite/generated-src/jni/NativeUsesSingleLanguageListeners.hpp
        deps/djinni/test-suite/generated-src/jni/NativeVarnameInterface.cpp
        deps/djinni/test-suite/generated-src/jni/NativeVarnameInterface.hpp
        deps/djinni/test-suite/generated-src/jni/NativeVarnameRecord.cpp
        deps/djinni/test-suite/generated-src/jni/NativeVarnameRecord.hpp
        deps/djinni/test-suite/generated-src/jni/NativeWcharTestHelpers.cpp
        deps/djinni/test-suite/generated-src/jni/NativeWcharTestHelpers.hpp
        deps/djinni/test-suite/generated-src/jni/NativeWcharTestRec.cpp
        deps/djinni/test-suite/generated-src/jni/NativeWcharTestRec.hpp
        deps/djinni/test-suite/generated-src/objc/DBAccessFlags+Private.h
        deps/djinni/test-suite/generated-src/objc/DBAccessFlags.h
        deps/djinni/test-suite/generated-src/objc/DBAssortedPrimitives+Private.h
        deps/djinni/test-suite/generated-src/objc/DBAssortedPrimitives.h
        deps/djinni/test-suite/generated-src/objc/DBClientInterface+Private.h
        deps/djinni/test-suite/generated-src/objc/DBClientInterface.h
        deps/djinni/test-suite/generated-src/objc/DBClientReturnedRecord+Private.h
        deps/djinni/test-suite/generated-src/objc/DBClientReturnedRecord.h
        deps/djinni/test-suite/generated-src/objc/DBColor+Private.h
        deps/djinni/test-suite/generated-src/objc/DBColor.h
        deps/djinni/test-suite/generated-src/objc/DBConflict+Private.h
        deps/djinni/test-suite/generated-src/objc/DBConflict.h
        deps/djinni/test-suite/generated-src/objc/DBConflictUser+Private.h
        deps/djinni/test-suite/generated-src/objc/DBConflictUser.h
        deps/djinni/test-suite/generated-src/objc/DBConstantEnum+Private.h
        deps/djinni/test-suite/generated-src/objc/DBConstantEnum.h
        deps/djinni/test-suite/generated-src/objc/DBConstantRecord+Private.h
        deps/djinni/test-suite/generated-src/objc/DBConstantRecord.h
        deps/djinni/test-suite/generated-src/objc/DBConstants+Private.h
        deps/djinni/test-suite/generated-src/objc/DBConstants.h
        deps/djinni/test-suite/generated-src/objc/DBConstantsInterface+Private.h
        deps/djinni/test-suite/generated-src/objc/DBConstantsInterface.h
        deps/djinni/test-suite/generated-src/objc/DBCppException+Private.h
        deps/djinni/test-suite/generated-src/objc/DBCppException.h
        deps/djinni/test-suite/generated-src/objc/DBDateRecord+Private.h
        deps/djinni/test-suite/generated-src/objc/DBDateRecord.h
        deps/djinni/test-suite/generated-src/objc/DBEmptyFlags+Private.h
        deps/djinni/test-suite/generated-src/objc/DBEmptyFlags.h
        deps/djinni/test-suite/generated-src/objc/DBEmptyRecord+Private.h
        deps/djinni/test-suite/generated-src/objc/DBEmptyRecord.h
        deps/djinni/test-suite/generated-src/objc/DBEnumUsageInterface+Private.h
        deps/djinni/test-suite/generated-src/objc/DBEnumUsageInterface.h
        deps/djinni/test-suite/generated-src/objc/DBEnumUsageRecord+Private.h
        deps/djinni/test-suite/generated-src/objc/DBEnumUsageRecord.h
        deps/djinni/test-suite/generated-src/objc/DBExtendedRecord+Private.h
        deps/djinni/test-suite/generated-src/objc/DBExtendedRecord.h
        deps/djinni/test-suite/generated-src/objc/DBExternInterface1+Private.h
        deps/djinni/test-suite/generated-src/objc/DBExternInterface1.h
        deps/djinni/test-suite/generated-src/objc/DBExternInterface2+Private.h
        deps/djinni/test-suite/generated-src/objc/DBExternInterface2.h
        deps/djinni/test-suite/generated-src/objc/DBExternRecordWithDerivings+Private.h
        deps/djinni/test-suite/generated-src/objc/DBExternRecordWithDerivings.h
        deps/djinni/test-suite/generated-src/objc/DBFirstListener+Private.h
        deps/djinni/test-suite/generated-src/objc/DBFirstListener.h
        deps/djinni/test-suite/generated-src/objc/DBFlagRoundtrip+Private.h
        deps/djinni/test-suite/generated-src/objc/DBFlagRoundtrip.h
        deps/djinni/test-suite/generated-src/objc/DBInterfaceUsingExtendedRecord+Private.h
        deps/djinni/test-suite/generated-src/objc/DBInterfaceUsingExtendedRecord.h
        deps/djinni/test-suite/generated-src/objc/DBJavaOnlyListener+Private.h
        deps/djinni/test-suite/generated-src/objc/DBJavaOnlyListener.h
        deps/djinni/test-suite/generated-src/objc/DBListenerCaller+Private.h
        deps/djinni/test-suite/generated-src/objc/DBListenerCaller.h
        deps/djinni/test-suite/generated-src/objc/DBMapDateRecord+Private.h
        deps/djinni/test-suite/generated-src/objc/DBMapDateRecord.h
        deps/djinni/test-suite/generated-src/objc/DBMapListRecord+Private.h
        deps/djinni/test-suite/generated-src/objc/DBMapListRecord.h
        deps/djinni/test-suite/generated-src/objc/DBMapRecord+Private.h
        deps/djinni/test-suite/generated-src/objc/DBMapRecord.h
        deps/djinni/test-suite/generated-src/objc/DBNestedCollection+Private.h
        deps/djinni/test-suite/generated-src/objc/DBNestedCollection.h
        deps/djinni/test-suite/generated-src/objc/DBObjcOnlyListener+Private.h
        deps/djinni/test-suite/generated-src/objc/DBObjcOnlyListener.h
        deps/djinni/test-suite/generated-src/objc/DBPrimitiveList+Private.h
        deps/djinni/test-suite/generated-src/objc/DBPrimitiveList.h
        deps/djinni/test-suite/generated-src/objc/DBRecordUsingExtendedRecord+Private.h
        deps/djinni/test-suite/generated-src/objc/DBRecordUsingExtendedRecord.h
        deps/djinni/test-suite/generated-src/objc/DBRecordWithDerivings+Private.h
        deps/djinni/test-suite/generated-src/objc/DBRecordWithDerivings.h
        deps/djinni/test-suite/generated-src/objc/DBRecordWithDurationAndDerivings+Private.h
        deps/djinni/test-suite/generated-src/objc/DBRecordWithDurationAndDerivings.h
        deps/djinni/test-suite/generated-src/objc/DBRecordWithFlags+Private.h
        deps/djinni/test-suite/generated-src/objc/DBRecordWithFlags.h
        deps/djinni/test-suite/generated-src/objc/DBRecordWithNestedDerivings+Private.h
        deps/djinni/test-suite/generated-src/objc/DBRecordWithNestedDerivings.h
        deps/djinni/test-suite/generated-src/objc/DBReturnOne+Private.h
        deps/djinni/test-suite/generated-src/objc/DBReturnOne.h
        deps/djinni/test-suite/generated-src/objc/DBReturnTwo+Private.h
        deps/djinni/test-suite/generated-src/objc/DBReturnTwo.h
        deps/djinni/test-suite/generated-src/objc/DBReverseClientInterface+Private.h
        deps/djinni/test-suite/generated-src/objc/DBReverseClientInterface.h
        deps/djinni/test-suite/generated-src/objc/DBSecondListener+Private.h
        deps/djinni/test-suite/generated-src/objc/DBSecondListener.h
        deps/djinni/test-suite/generated-src/objc/DBSetRecord+Private.h
        deps/djinni/test-suite/generated-src/objc/DBSetRecord.h
        deps/djinni/test-suite/generated-src/objc/DBTestDuration+Private.h
        deps/djinni/test-suite/generated-src/objc/DBTestDuration.h
        deps/djinni/test-suite/generated-src/objc/DBTestHelpers+Private.h
        deps/djinni/test-suite/generated-src/objc/DBTestHelpers.h
        deps/djinni/test-suite/generated-src/objc/DBUserToken+Private.h
        deps/djinni/test-suite/generated-src/objc/DBUserToken.h
        deps/djinni/test-suite/generated-src/objc/DBUsesSingleLanguageListeners+Private.h
        deps/djinni/test-suite/generated-src/objc/DBUsesSingleLanguageListeners.h
        deps/djinni/test-suite/generated-src/objc/DBVarnameInterface+Private.h
        deps/djinni/test-suite/generated-src/objc/DBVarnameInterface.h
        deps/djinni/test-suite/generated-src/objc/DBVarnameRecord+Private.h
        deps/djinni/test-suite/generated-src/objc/DBVarnameRecord.h
        deps/djinni/test-suite/generated-src/objc/DBWcharTestHelpers+Private.h
        deps/djinni/test-suite/generated-src/objc/DBWcharTestHelpers.h
        deps/djinni/test-suite/generated-src/objc/DBWcharTestRec+Private.h
        deps/djinni/test-suite/generated-src/objc/DBWcharTestRec.h
        deps/djinni/test-suite/handwritten-src/cpp/cpp_exception_impl.cpp
        deps/djinni/test-suite/handwritten-src/cpp/cpp_exception_impl.hpp
        deps/djinni/test-suite/handwritten-src/cpp/Duration-jni.hpp
        deps/djinni/test-suite/handwritten-src/cpp/Duration-objc.hpp
        deps/djinni/test-suite/handwritten-src/cpp/extended_record.cpp
        deps/djinni/test-suite/handwritten-src/cpp/extended_record.hpp
        deps/djinni/test-suite/handwritten-src/cpp/flag_roundtrip.cpp
        deps/djinni/test-suite/handwritten-src/cpp/ListenerCaller.cpp
        deps/djinni/test-suite/handwritten-src/cpp/optional.hpp
        deps/djinni/test-suite/handwritten-src/cpp/return_one_two.cpp
        deps/djinni/test-suite/handwritten-src/cpp/reverse_client_interface_impl.cpp
        deps/djinni/test-suite/handwritten-src/cpp/reverse_client_interface_impl.hpp
        deps/djinni/test-suite/handwritten-src/cpp/test_helpers.cpp
        deps/djinni/test-suite/handwritten-src/cpp/TranslateDuration.cpp
        deps/djinni/test-suite/handwritten-src/cpp/wchar_test_helpers.cpp
        deps/djinni/test-suite/handwritten-src/objc/impl/DBClientInterfaceImpl.h
        deps/gyp/data/win/large-pdb-shim.cc
        deps/gyp/test/actions/generated-header/main.cc
        deps/gyp/test/actions/src/subdir1/program.c
        deps/gyp/test/actions-multiple/src/foo.c
        deps/gyp/test/actions-multiple/src/main.c
        deps/gyp/test/actions-none/src/foo.cc
        deps/gyp/test/additional-targets/src/dir1/lib1.c
        deps/gyp/test/android/32or64.c
        deps/gyp/test/android/hello.c
        deps/gyp/test/android/writefile.c
        deps/gyp/test/arflags/lib.cc
        deps/gyp/test/assembly/src/lib1.c
        deps/gyp/test/assembly/src/program.c
        deps/gyp/test/build-option/hello.c
        deps/gyp/test/builddir/src/subdir2/subdir3/subdir4/subdir5/prog5.c
        deps/gyp/test/builddir/src/subdir2/subdir3/subdir4/prog4.c
        deps/gyp/test/builddir/src/subdir2/subdir3/prog3.c
        deps/gyp/test/builddir/src/subdir2/prog2.c
        deps/gyp/test/builddir/src/func1.c
        deps/gyp/test/builddir/src/func2.c
        deps/gyp/test/builddir/src/func3.c
        deps/gyp/test/builddir/src/func4.c
        deps/gyp/test/builddir/src/func5.c
        deps/gyp/test/builddir/src/prog1.c
        deps/gyp/test/cflags/cflags.c
        deps/gyp/test/compilable/src/lib1.cpp
        deps/gyp/test/compilable/src/lib1.hpp
        deps/gyp/test/compilable/src/program.cpp
        deps/gyp/test/compiler-override/cxxtest.cc
        deps/gyp/test/compiler-override/test.c
        deps/gyp/test/conditions/elseif/program.cc
        deps/gyp/test/configurations/basics/configurations.c
        deps/gyp/test/configurations/inheritance/configurations.c
        deps/gyp/test/configurations/target_platform/front.c
        deps/gyp/test/configurations/target_platform/left.c
        deps/gyp/test/configurations/target_platform/right.c
        deps/gyp/test/configurations/x64/configurations.c
        deps/gyp/test/cxxflags/cxxflags.cc
        deps/gyp/test/defines/defines.c
        deps/gyp/test/defines-escaping/defines-escaping.c
        deps/gyp/test/dependencies/b/b.c
        deps/gyp/test/dependencies/b/b3.c
        deps/gyp/test/dependencies/c/c.c
        deps/gyp/test/dependencies/c/d.c
        deps/gyp/test/dependencies/sharedlib-linksettings/program.c
        deps/gyp/test/dependencies/sharedlib-linksettings/sharedlib.c
        deps/gyp/test/dependencies/sharedlib-linksettings/staticlib.c
        deps/gyp/test/dependencies/a.c
        deps/gyp/test/dependencies/main.c
        deps/gyp/test/dependency-copy/src/file1.c
        deps/gyp/test/dependency-copy/src/file2.c
        deps/gyp/test/exclusion/hello.c
        deps/gyp/test/external-cross-compile/src/bogus1.cc
        deps/gyp/test/external-cross-compile/src/bogus2.c
        deps/gyp/test/external-cross-compile/src/program.cc
        deps/gyp/test/external-cross-compile/src/test1.cc
        deps/gyp/test/external-cross-compile/src/test2.c
        deps/gyp/test/external-cross-compile/src/test3.cc
        deps/gyp/test/external-cross-compile/src/test4.c
        deps/gyp/test/generator-output/actions/subdir1/program.c
        deps/gyp/test/generator-output/mac-bundle/header.h
        deps/gyp/test/generator-output/mac-bundle/main.c
        deps/gyp/test/generator-output/rules/subdir1/program.c
        deps/gyp/test/generator-output/src/inc1/include1.h
        deps/gyp/test/generator-output/src/subdir2/deeper/deeper.c
        deps/gyp/test/generator-output/src/subdir2/deeper/deeper.h
        deps/gyp/test/generator-output/src/subdir2/inc2/include2.h
        deps/gyp/test/generator-output/src/subdir2/prog2.c
        deps/gyp/test/generator-output/src/subdir3/inc3/include3.h
        deps/gyp/test/generator-output/src/subdir3/prog3.c
        deps/gyp/test/generator-output/src/inc.h
        deps/gyp/test/generator-output/src/prog1.c
        deps/gyp/test/hard_dependency/src/a.c
        deps/gyp/test/hard_dependency/src/a.h
        deps/gyp/test/hard_dependency/src/b.c
        deps/gyp/test/hard_dependency/src/b.h
        deps/gyp/test/hard_dependency/src/c.c
        deps/gyp/test/hard_dependency/src/c.h
        deps/gyp/test/hard_dependency/src/d.c
        deps/gyp/test/hello/hello.c
        deps/gyp/test/hello/hello2.c
        deps/gyp/test/home_dot_gyp/src/printfoo.c
        deps/gyp/test/include_dirs/src/inc1/include1.h
        deps/gyp/test/include_dirs/src/shadow1/shadow.h
        deps/gyp/test/include_dirs/src/shadow2/shadow.h
        deps/gyp/test/include_dirs/src/subdir/inc2/include2.h
        deps/gyp/test/include_dirs/src/subdir/inc.h
        deps/gyp/test/include_dirs/src/subdir/subdir_includes.c
        deps/gyp/test/include_dirs/src/inc.h
        deps/gyp/test/include_dirs/src/includes.c
        deps/gyp/test/ios/app-bundle/tool_main.cc
        deps/gyp/test/ios/deployment-target/check-version-min.c
        deps/gyp/test/ios/extension/ActionExtension/ActionViewController.h
        deps/gyp/test/ios/extension/ExtensionContainer/AppDelegate.h
        deps/gyp/test/ios/extension/ExtensionContainer/ViewController.h
        deps/gyp/test/ios/watch/WatchContainer/AppDelegate.h
        deps/gyp/test/ios/watch/WatchContainer/ViewController.h
        deps/gyp/test/ios/watch/WatchKitExtension/InterfaceController.h
        deps/gyp/test/library/src/lib1.c
        deps/gyp/test/library/src/lib1_moveable.c
        deps/gyp/test/library/src/lib2.c
        deps/gyp/test/library/src/lib2_moveable.c
        deps/gyp/test/library/src/program.c
        deps/gyp/test/library_dirs/subdir/hello.cc
        deps/gyp/test/library_dirs/subdir/mylib.cc
        deps/gyp/test/library_dirs/subdir/mylib.h
        deps/gyp/test/link-dependency/main.c
        deps/gyp/test/link-dependency/mymalloc.c
        deps/gyp/test/link-objects/base.c
        deps/gyp/test/link-objects/extra.c
        deps/gyp/test/linux/implicit-rpath/file.c
        deps/gyp/test/linux/implicit-rpath/main.c
        deps/gyp/test/mac/app-bundle/TestApp/TestAppAppDelegate.h
        deps/gyp/test/mac/app-bundle/empty.c
        deps/gyp/test/mac/archs/empty_main.cc
        deps/gyp/test/mac/archs/file_a.cc
        deps/gyp/test/mac/archs/file_a.h
        deps/gyp/test/mac/archs/file_b.cc
        deps/gyp/test/mac/archs/file_b.h
        deps/gyp/test/mac/archs/file_c.cc
        deps/gyp/test/mac/archs/file_d.cc
        deps/gyp/test/mac/archs/header.h
        deps/gyp/test/mac/archs/my_file.cc
        deps/gyp/test/mac/archs/my_main_file.cc
        deps/gyp/test/mac/cflags/ccfile.cc
        deps/gyp/test/mac/cflags/ccfile_withcflags.cc
        deps/gyp/test/mac/cflags/cfile.c
        deps/gyp/test/mac/cflags/cppfile.cpp
        deps/gyp/test/mac/cflags/cppfile_withcflags.cpp
        deps/gyp/test/mac/cflags/cxxfile.cxx
        deps/gyp/test/mac/cflags/cxxfile_withcflags.cxx
        deps/gyp/test/mac/clang-cxx-language-standard/c++11.cc
        deps/gyp/test/mac/clang-cxx-language-standard/c++98.cc
        deps/gyp/test/mac/clang-cxx-library/libc++.cc
        deps/gyp/test/mac/clang-cxx-library/libstdc++.cc
        deps/gyp/test/mac/copy-dylib/empty.c
        deps/gyp/test/mac/debuginfo/file.c
        deps/gyp/test/mac/depend-on-bundle/bundle.c
        deps/gyp/test/mac/depend-on-bundle/executable.c
        deps/gyp/test/mac/deployment-target/check-version-min.c
        deps/gyp/test/mac/framework/TestFramework/ObjCVector.h
        deps/gyp/test/mac/framework/TestFramework/ObjCVectorInternal.h
        deps/gyp/test/mac/framework/empty.c
        deps/gyp/test/mac/framework-dirs/calculate.c
        deps/gyp/test/mac/framework-headers/myframework.h
        deps/gyp/test/mac/identical-name/proxy/testlib/testlib.cc
        deps/gyp/test/mac/identical-name/proxy/proxy.cc
        deps/gyp/test/mac/identical-name/testlib/main.cc
        deps/gyp/test/mac/identical-name/testlib/void.cc
        deps/gyp/test/mac/infoplist-process/main.c
        deps/gyp/test/mac/installname/file.c
        deps/gyp/test/mac/installname/main.c
        deps/gyp/test/mac/ldflags/subdirectory/file.c
        deps/gyp/test/mac/ldflags-libtool/file.c
        deps/gyp/test/mac/libraries/subdir/hello.cc
        deps/gyp/test/mac/libraries/subdir/mylib.c
        deps/gyp/test/mac/libtool-zero/mylib.c
        deps/gyp/test/mac/loadable-module/module.c
        deps/gyp/test/mac/loadable-module-bundle-product-extension/src.cc
        deps/gyp/test/mac/lto/ccfile.cc
        deps/gyp/test/mac/lto/cfile.c
        deps/gyp/test/mac/missing-cfbundlesignature/file.c
        deps/gyp/test/mac/non-strs-flattened-to-env/main.c
        deps/gyp/test/mac/objc-arc/c-file.c
        deps/gyp/test/mac/objc-arc/cc-file.cc
        deps/gyp/test/mac/objc-gc/c-file.c
        deps/gyp/test/mac/objc-gc/cc-file.cc
        deps/gyp/test/mac/postbuild-copy-bundle/empty.c
        deps/gyp/test/mac/postbuild-copy-bundle/main.c
        deps/gyp/test/mac/postbuild-defaults/main.c
        deps/gyp/test/mac/postbuild-fail/file.c
        deps/gyp/test/mac/postbuild-multiple-configurations/main.c
        deps/gyp/test/mac/postbuild-static-library/empty.c
        deps/gyp/test/mac/postbuilds/file.c
        deps/gyp/test/mac/postbuilds/file_g.c
        deps/gyp/test/mac/postbuilds/file_h.c
        deps/gyp/test/mac/prefixheader/file.c
        deps/gyp/test/mac/prefixheader/file.cc
        deps/gyp/test/mac/prefixheader/header.h
        deps/gyp/test/mac/rebuild/empty.c
        deps/gyp/test/mac/rebuild/main.c
        deps/gyp/test/mac/rpath/file.c
        deps/gyp/test/mac/rpath/main.c
        deps/gyp/test/mac/sdkroot/file.cc
        deps/gyp/test/mac/sourceless-module/empty.c
        deps/gyp/test/mac/sourceless-module/fun.c
        deps/gyp/test/mac/strip/subdirectory/nested_file.c
        deps/gyp/test/mac/strip/file.c
        deps/gyp/test/mac/strip/main.c
        deps/gyp/test/mac/type_envvars/file.c
        deps/gyp/test/mac/unicode-settings/file.cc
        deps/gyp/test/mac/xcode-env-order/main.c
        deps/gyp/test/mac/xcode-gcc/aliasing.cc
        deps/gyp/test/mac/xcode-gcc/valid_c.c
        deps/gyp/test/mac/xcode-gcc/valid_cc.cc
        deps/gyp/test/mac/xcode-gcc/warn_about_invalid_offsetof_macro.cc
        deps/gyp/test/mac/xcode-gcc/warn_about_missing_newline.c
        deps/gyp/test/mac/xcode-support-actions/source.c
        deps/gyp/test/mac/xctest/MyClass.h
        deps/gyp/test/make/noload/lib/shared.c
        deps/gyp/test/make/noload/lib/shared.h
        deps/gyp/test/make/noload/main.c
        deps/gyp/test/make/main.cc
        deps/gyp/test/make/main.h
        deps/gyp/test/make_global_settings/full-toolchain/bar.cc
        deps/gyp/test/make_global_settings/full-toolchain/foo.c
        deps/gyp/test/module/src/lib1.c
        deps/gyp/test/module/src/lib2.c
        deps/gyp/test/module/src/program.c
        deps/gyp/test/msvs/buildevents/main.cc
        deps/gyp/test/msvs/config_attrs/hello.c
        deps/gyp/test/msvs/external_builder/hello.cpp
        deps/gyp/test/msvs/list_excluded/hello.cpp
        deps/gyp/test/msvs/list_excluded/hello_mac.cpp
        deps/gyp/test/msvs/props/hello.c
        deps/gyp/test/msvs/shared_output/there/there.c
        deps/gyp/test/msvs/shared_output/hello.c
        deps/gyp/test/msvs/uldi2010/hello.c
        deps/gyp/test/msvs/uldi2010/hello2.c
        deps/gyp/test/multiple-targets/src/common.c
        deps/gyp/test/multiple-targets/src/prog1.c
        deps/gyp/test/multiple-targets/src/prog2.c
        deps/gyp/test/ninja/action_dependencies/src/a.c
        deps/gyp/test/ninja/action_dependencies/src/a.h
        deps/gyp/test/ninja/action_dependencies/src/b.c
        deps/gyp/test/ninja/action_dependencies/src/b.h
        deps/gyp/test/ninja/action_dependencies/src/c.c
        deps/gyp/test/ninja/action_dependencies/src/c.h
        deps/gyp/test/ninja/chained-dependency/chained.c
        deps/gyp/test/ninja/normalize-paths-win/hello.cc
        deps/gyp/test/ninja/solibs_avoid_relinking/main.cc
        deps/gyp/test/ninja/solibs_avoid_relinking/solib.cc
        deps/gyp/test/ninja/use-custom-environment-files/use-custom-environment-files.cc
        deps/gyp/test/no-cpp/src/call-f-main.c
        deps/gyp/test/no-cpp/src/empty-main.c
        deps/gyp/test/no-cpp/src/f.cc
        deps/gyp/test/product/hello.c
        deps/gyp/test/prune_targets/lib1.cc
        deps/gyp/test/prune_targets/lib2.cc
        deps/gyp/test/prune_targets/lib3.cc
        deps/gyp/test/prune_targets/lib_indirect.cc
        deps/gyp/test/prune_targets/program.cc
        deps/gyp/test/relative/foo/a/c/c.cc
        deps/gyp/test/relative/foo/a/a.cc
        deps/gyp/test/relative/foo/b/b.cc
        deps/gyp/test/rename/filecase/file.c
        deps/gyp/test/rules/src/subdir1/program.c
        deps/gyp/test/rules/src/subdir2/program.c
        deps/gyp/test/rules/src/subdir3/program.c
        deps/gyp/test/rules/src/subdir4/program.c
        deps/gyp/test/rules-dirname/src/subdir/main.cc
        deps/gyp/test/rules-rebuild/src/main.c
        deps/gyp/test/rules-use-built-dependencies/src/main.cc
        deps/gyp/test/rules-variables/src/input_name/test.c
        deps/gyp/test/rules-variables/src/input_path/subdir/test.c
        deps/gyp/test/rules-variables/src/subdir/input_dirname.c
        deps/gyp/test/rules-variables/src/subdir/test.c
        deps/gyp/test/rules-variables/src/input_ext.c
        deps/gyp/test/rules-variables/src/test.input_root.c
        deps/gyp/test/same-gyp-name/src/subdir1/main1.cc
        deps/gyp/test/same-gyp-name/src/subdir2/main2.cc
        deps/gyp/test/same-source-file-name/src/subdir1/func.c
        deps/gyp/test/same-source-file-name/src/subdir2/func.c
        deps/gyp/test/same-source-file-name/src/func.c
        deps/gyp/test/same-source-file-name/src/prog1.c
        deps/gyp/test/same-source-file-name/src/prog2.c
        deps/gyp/test/same-source-file-name/src/prog3.c
        deps/gyp/test/sanitize-rule-names/hello.cc
        deps/gyp/test/sibling/src/prog1/prog1.c
        deps/gyp/test/sibling/src/prog2/prog2.c
        deps/gyp/test/standalone-static-library/mylib.c
        deps/gyp/test/standalone-static-library/prog.c
        deps/gyp/test/subdirectory/src/subdir/subdir2/prog3.c
        deps/gyp/test/subdirectory/src/subdir/prog2.c
        deps/gyp/test/subdirectory/src/prog1.c
        deps/gyp/test/target/hello.c
        deps/gyp/test/toolsets/main.cc
        deps/gyp/test/toolsets/toolsets.cc
        deps/gyp/test/toolsets/toolsets_shared.cc
        deps/gyp/test/toplevel-dir/src/sub1/prog1.c
        deps/gyp/test/toplevel-dir/src/sub2/prog2.c
        deps/gyp/test/variables/latelate/src/program.cc
        deps/gyp/test/variables/variable-in-path/C1/hello.cc
        deps/gyp/test/win/asm-files/hello.cc
        deps/gyp/test/win/compiler-flags/subdir/header.h
        deps/gyp/test/win/compiler-flags/additional-include-dirs.cc
        deps/gyp/test/win/compiler-flags/additional-options.cc
        deps/gyp/test/win/compiler-flags/buffer-security.cc
        deps/gyp/test/win/compiler-flags/calling-convention.cc
        deps/gyp/test/win/compiler-flags/character-set-mbcs.cc
        deps/gyp/test/win/compiler-flags/character-set-unicode.cc
        deps/gyp/test/win/compiler-flags/default-char-is-unsigned.cc
        deps/gyp/test/win/compiler-flags/disable-specific-warnings.cc
        deps/gyp/test/win/compiler-flags/enable-enhanced-instruction-set.cc
        deps/gyp/test/win/compiler-flags/exception-handling-on.cc
        deps/gyp/test/win/compiler-flags/floating-point-model-fast.cc
        deps/gyp/test/win/compiler-flags/floating-point-model-precise.cc
        deps/gyp/test/win/compiler-flags/floating-point-model-strict.cc
        deps/gyp/test/win/compiler-flags/force-include-files-with-precompiled.cc
        deps/gyp/test/win/compiler-flags/force-include-files.cc
        deps/gyp/test/win/compiler-flags/function-level-linking.cc
        deps/gyp/test/win/compiler-flags/hello.cc
        deps/gyp/test/win/compiler-flags/pdbname.cc
        deps/gyp/test/win/compiler-flags/precomp.cc
        deps/gyp/test/win/compiler-flags/rtti-on.cc
        deps/gyp/test/win/compiler-flags/runtime-checks.cc
        deps/gyp/test/win/compiler-flags/runtime-library-md.cc
        deps/gyp/test/win/compiler-flags/runtime-library-mdd.cc
        deps/gyp/test/win/compiler-flags/runtime-library-mt.cc
        deps/gyp/test/win/compiler-flags/runtime-library-mtd.cc
        deps/gyp/test/win/compiler-flags/treat-wchar-t-as-built-in-type1.cc
        deps/gyp/test/win/compiler-flags/treat-wchar-t-as-built-in-type2.cc
        deps/gyp/test/win/compiler-flags/uninit.cc
        deps/gyp/test/win/compiler-flags/warning-as-error.cc
        deps/gyp/test/win/compiler-flags/warning-level1.cc
        deps/gyp/test/win/compiler-flags/warning-level2.cc
        deps/gyp/test/win/compiler-flags/warning-level3.cc
        deps/gyp/test/win/compiler-flags/warning-level4.cc
        deps/gyp/test/win/enable-winrt/dllmain.cc
        deps/gyp/test/win/generator-output-different-drive/prog.c
        deps/gyp/test/win/idl-excluded/program.cc
        deps/gyp/test/win/idl-includedirs/hello.cc
        deps/gyp/test/win/idl-rules/history_indexer_user.cc
        deps/gyp/test/win/importlib/dll_no_exports.cc
        deps/gyp/test/win/importlib/has-exports.cc
        deps/gyp/test/win/importlib/hello.cc
        deps/gyp/test/win/large-pdb/dllmain.cc
        deps/gyp/test/win/large-pdb/main.cc
        deps/gyp/test/win/lib-flags/answer.cc
        deps/gyp/test/win/lib-flags/answer.h
        deps/gyp/test/win/linker-flags/a/x.cc
        deps/gyp/test/win/linker-flags/a/z.cc
        deps/gyp/test/win/linker-flags/b/y.cc
        deps/gyp/test/win/linker-flags/additional-deps.cc
        deps/gyp/test/win/linker-flags/deffile.cc
        deps/gyp/test/win/linker-flags/delay-load.cc
        deps/gyp/test/win/linker-flags/entrypointsymbol.cc
        deps/gyp/test/win/linker-flags/hello.cc
        deps/gyp/test/win/linker-flags/inline_test.cc
        deps/gyp/test/win/linker-flags/inline_test.h
        deps/gyp/test/win/linker-flags/inline_test_main.cc
        deps/gyp/test/win/linker-flags/library-adjust.cc
        deps/gyp/test/win/linker-flags/library-directories-define.cc
        deps/gyp/test/win/linker-flags/library-directories-reference.cc
        deps/gyp/test/win/linker-flags/link-warning.cc
        deps/gyp/test/win/linker-flags/main-crt.c
        deps/gyp/test/win/linker-flags/manifest-in-comment.cc
        deps/gyp/test/win/linker-flags/mapfile.cc
        deps/gyp/test/win/linker-flags/no-default-libs.cc
        deps/gyp/test/win/linker-flags/nodefaultlib.cc
        deps/gyp/test/win/linker-flags/opt-icf.cc
        deps/gyp/test/win/linker-flags/opt-ref.cc
        deps/gyp/test/win/linker-flags/safeseh_hello.cc
        deps/gyp/test/win/linker-flags/subsystem-windows.cc
        deps/gyp/test/win/linker-flags/x.cc
        deps/gyp/test/win/linker-flags/y.cc
        deps/gyp/test/win/linker-flags/z.cc
        deps/gyp/test/win/long-command-line/function.cc
        deps/gyp/test/win/long-command-line/hello.cc
        deps/gyp/test/win/ml-safeseh/hello.cc
        deps/gyp/test/win/precompiled/hello.c
        deps/gyp/test/win/precompiled/hello2.c
        deps/gyp/test/win/precompiled/precomp.c
        deps/gyp/test/win/rc-build/subdir/include.h
        deps/gyp/test/win/rc-build/hello.cpp
        deps/gyp/test/win/rc-build/hello.h
        deps/gyp/test/win/rc-build/Resource.h
        deps/gyp/test/win/rc-build/targetver.h
        deps/gyp/test/win/shard/hello.cc
        deps/gyp/test/win/shard/hello1.cc
        deps/gyp/test/win/shard/hello2.cc
        deps/gyp/test/win/shard/hello3.cc
        deps/gyp/test/win/shard/hello4.cc
        deps/gyp/test/win/system-include/bar/header.h
        deps/gyp/test/win/system-include/common/commonheader.h
        deps/gyp/test/win/system-include/foo/header.h
        deps/gyp/test/win/system-include/main.cc
        deps/gyp/test/win/uldi/a.cc
        deps/gyp/test/win/uldi/b.cc
        deps/gyp/test/win/uldi/main.cc
        deps/gyp/test/win/vs-macros/hello.cc
        deps/sqlite3/shell.c
        deps/sqlite3/sqlite3.c
        deps/sqlite3/sqlite3.h
        deps/sqlite3/sqlite3ext.h
        generated-src/cpp/client_interface.hpp
        generated-src/cpp/reply.hpp
        generated-src/cpp/user.hpp
        generated-src/jni/NativeClientInterface.cpp
        generated-src/jni/NativeClientInterface.hpp
        generated-src/jni/NativeReply.cpp
        generated-src/jni/NativeReply.hpp
        generated-src/jni/NativeUser.cpp
        generated-src/jni/NativeUser.hpp
        generated-src/objc/TDAClientInterface+Private.h
        generated-src/objc/TDAClientInterface.h
        generated-src/objc/TDAReply+Private.h
        generated-src/objc/TDAReply.h
        generated-src/objc/TDAUser+Private.h
        generated-src/objc/TDAUser.h
        src/client_impl.cpp
        src/client_impl.hpp)

add_executable(djinni_client_app ${SOURCE_FILES})